--- a/add-student.html
+++ b/add-student.html
@@ -16,7 +16,7 @@
     <div class="form-group">
       <select id="course">
         <option disabled selected>Select Course</option>
-       
+        <option>BCA</option>
         <option>BSc</option>
         <option>BCom</option>
       </select>
