--- a/add-student.html
+++ b/add-student.html
@@ -41,7 +41,7 @@
     <hr />
 
     <div class="form-group">
-      <h3>Remove Student</h3>
+      <h3>hatao Student ko</h3>
       <input type="text" id="removeRoll" placeholder="Enter Roll No" />
       <select id="removeCourse">
         <option disabled selected>Select Course</option>
