--- a/dashboard.html
+++ b/dashboard.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Dashboard | Smart Attendance GSCK</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css?v=99">
+
   <link rel="icon" href="assets/logo.png" />
   <script type="module" src="firebase-config.js"></script>
   <script src="theme.js"></script>
