--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Teacher Login | Smart Attendance GSCK</title>
-  <link rel="stylesheet" href="style.css" />
+ <link rel="stylesheet" href="style.css?v=99">
   <link rel="icon" href="assets/logo.png" />
   <script type="module" src="firebase-config.js"></script>
   <script src="https://cdn.sheetjs.com/xlsx-0.20.0/package/dist/xlsx.full.min.js"></script>
